Data fetching example moved to different component

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <div id="results"></div>
         </div>
       </div>
+      <div class="row">
+        <div id="posts"></div>
+      </div>
     </div>
     <!-- built files will be auto injected -->
   </body>
